<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
       android:padding="10dp"
    android:orientation="vertical" >

    <TextView
     android:layout_width="fill_parent"
        android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
        android:textColor="@android:color/black"
        android:text="@string/liuyan"
   />
    <EditText
        android:id="@+id/liuyantext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lines="10"
         android:layout_marginTop="10dp"
         android:gravity="top"
        android:hint="@string/liuyantext" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_blue"
        android:onClick="save"
        android:text="@string/liuyansave"
         />

</LinearLayout>