<?xml version="1.0" encoding="UTF-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
       
        android:orientation="vertical" >
		<FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
          
            android:layout_weight="1.0" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/main_radio_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            

            <RadioButton
                android:id="@+id/main_rb_search"
                style="@style/main_tab_bottom"
                android:background="@drawable/main_rb_selector"
                android:drawableTop="@drawable/rb_search_selector"
                android:text="@string/main_rb_search"
                android:textColor="@color/grey" />
            
            <RadioButton
                android:id="@+id/main_rb_home"
                style="@style/main_tab_bottom"
                android:background="@drawable/main_rb_selector"
                android:drawableTop="@drawable/rb_home_selector"
                android:text="@string/main_rb_home"
             android:textColor="@color/grey"
                android:checked="true" />

            <RadioButton
                android:id="@+id/main_rb_camera"
                style="@style/main_tab_bottom"
                android:background="@drawable/main_rb_selector"
                android:drawableTop="@drawable/rb_share_selector"
                android:text="@string/main_rb_camera"
                android:textColor="@color/grey"/>        

            <RadioButton
                android:id="@+id/main_rb_selfinfo"
                style="@style/main_tab_bottom"
                android:background="@drawable/main_rb_selector"
                android:drawableTop="@drawable/rb_selfinfo_selector"
                android:text="@string/main_rb_selfinfo"
               android:textColor="@color/grey" />

            <RadioButton
                android:id="@+id/main_rb_more"
                style="@style/main_tab_bottom"
                android:background="@drawable/main_rb_selector"
                android:drawableTop="@drawable/rb_more_selector"
                android:text="@string/main_rb_more"
            android:textColor="@color/grey"/>

        </RadioGroup>
    </LinearLayout>

</TabHost>