<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:background="@color/treeblue" >

        <TextView
            android:id="@+id/item_text"
            android:layout_width="wrap_content"
            android:layout_height="45dip"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/main_rb_more"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/refresh"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"
            android:background="@drawable/icon2"
            android:gravity="center" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <Button
            android:id="@+id/aboutours"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/icon_top"
            android:drawableLeft="@drawable/ours"
            android:drawableRight="@drawable/btn_right"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/aboutours"
            android:textColor="@android:color/darker_gray" />

        <Button
            android:id="@+id/contact_us"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/icon_bottom"
            android:drawableLeft="@drawable/contact_us"
            android:drawableRight="@drawable/btn_right"
            android:paddingLeft="20dp"
            android:paddingRight="15dp"
            android:text="@string/contact_us"
            android:textColor="@android:color/darker_gray" />
    </LinearLayout>

</LinearLayout>