<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.nyist.activity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >
<RelativeLayout 
     android:layout_width="fill_parent"
    android:layout_height="45dip"
    android:background="@color/treeblue"
    >
    <Button 
        android:id="@+id/go_back"
        android:layout_marginLeft="5dp"
        android:layout_width="45dp"
      android:layout_height="45dp"
      android:layout_alignParentLeft="true"
      android:paddingRight="10dp"
        android:gravity="center"
        android:background="@drawable/back"
        />

    <TextView
        android:id="@+id/item_text"
        android:layout_width="wrap_content"
        android:layout_height="50dip"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:text="招聘信息" />
    
     
    
    
    
</RelativeLayout>
    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:background="#ffffff" >

        <com.nyist.viewflowtest.ViewFlow
            android:id="@+id/recruitmentviewflow"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
        </com.nyist.viewflowtest.ViewFlow>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:padding="3dip" >

            <com.nyist.viewflowtest.CircleFlowIndicator
                android:id="@+id/recitmentindic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:padding="2dip"
                app:activeColor="#ff0000"
                app:activeType="fill"
                app:circleSeparation="20dip"
                app:inactiveColor="#8E8E8E"
                app:inactiveType="fill"
                app:radius="4dip" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <Button
            android:id="@+id/waiter"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/icon_top"
            android:drawableLeft="@drawable/recruitment"
            android:drawableRight="@drawable/btn_right"
            android:paddingLeft="20dp"
            android:paddingRight="15dp"
            android:text="@string/waiter"
            android:textColor="@android:color/darker_gray" />

        <Button
            android:id="@+id/cashier"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/icon_bottom"
            android:drawableLeft="@drawable/recruitment"
            android:drawableRight="@drawable/btn_right"
            android:paddingLeft="20dp"
            android:paddingRight="15dp"
            android:text="@string/cashier"
            android:textColor="@android:color/darker_gray" />

        <Button
            android:id="@+id/programmer"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/icon_bottom"
            android:drawableLeft="@drawable/recruitment"
            android:drawableRight="@drawable/btn_right"
            android:paddingLeft="20dp"
            android:paddingRight="15dp"
            android:text="@string/programmer"
            android:textColor="@android:color/darker_gray" />
    </LinearLayout>

</LinearLayout>